/**
 * Clase que representa un instrumento de viento.
 */
public class Viento extends Instrumento{
    /**
     * Constructor.
     *
     * @param tipoDeInstrumento
     * @param tipoDeMaterial
     * @param codigoDeInstrumento
     * @param precioDelInstrumento
     */
    public Viento(String tipoDeInstrumento, String tipoDeMaterial, int codigoDeInstrumento, int precioDelInstrumento) {
        super(tipoDeInstrumento, tipoDeMaterial, codigoDeInstrumento, precioDelInstrumento);
    }
}
